--- a/Services/ECommerce.Services.AuthAPI/appsettings.json
+++ b/Services/ECommerce.Services.AuthAPI/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-43HIK1B; Database=ECommerce_AuthDB; Trusted_Connection=True; TrustServerCertificate=True;"
+  },
+  "ApiSettings": {
+    "JwtOptions": {
+      "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
+      "Issuer": "ecommerce-auth-api",
+      "Audience": "ecommerce-client"
+    }
   }
 }
