--- a/FrontEnd/ECommerce.Web/appsettings.json
+++ b/FrontEnd/ECommerce.Web/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ServiceUrls": {
-    "CouponAPI": "https://localhost:7053"
+    "CouponAPI": "https://localhost:7053",
+    "AuthAPI": "https://localhost:7054"
   }
 }
