--- a/FrontEnd/ECommerce.Web/appsettings.json
+++ b/FrontEnd/ECommerce.Web/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ServiceUrls": {
     "CouponAPI": "https://localhost:7053",
-    "AuthAPI": "https://localhost:7054"
+    "AuthAPI": "https://localhost:7054",
+    "ProductAPI": "https://localhost:7055"
   }
 }
