--- a/FrontEnd/ECommerce.Web/appsettings.json
+++ b/FrontEnd/ECommerce.Web/appsettings.json
@@ -9,6 +9,7 @@
   "ServiceUrls": {
     "CouponAPI": "https://localhost:7053",
     "AuthAPI": "https://localhost:7054",
-    "ProductAPI": "https://localhost:7055"
+    "ProductAPI": "https://localhost:7055",
+    "ShoppingCartAPI": "https://localhost:7056"
   }
 }
