Mesaj gönderimi için Service Bus işlemleri - Microsoft Azure

--- a/Services/ECommerce.Services.ShoppingCartAPI/appsettings.json
+++ b/Services/ECommerce.Services.ShoppingCartAPI/appsettings.json
@@ -17,5 +17,8 @@
   "ServiceUrls": {
     "ProductAPI": "https://localhost:7055",
     "CouponAPI": "https://localhost:7053"
+  },
+  "TopicAndQueueNames": {
+    "EmailShoppingCart": "emailshoppingcart"
   }
 }
