--- a/Services/ECommerce.Services.ShoppingCartAPI/appsettings.json
+++ b/Services/ECommerce.Services.ShoppingCartAPI/appsettings.json
@@ -19,6 +19,6 @@
     "CouponAPI": "https://localhost:7053"
   },
   "TopicAndQueueNames": {
-    "EmailShoppingCart": "emailshoppingcart"
+    "EmailShoppingCartQueue": "emailshoppingcart"
   }
 }
